2003-04-25  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-replaceoldprinterids.in: Changed default pattern on the
	  right side of the printer ID to "(?!\d)", which means that there
	  should be no further digit on the right. This is the right
	  choice in nearly every case.

2003-04-23  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Auto-abbreviation of "*ShortNickName"s in
	  the PPD files so that they are not longer than 31 characters to
	  fulfill the Adobe specs.

2003-04-22  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.0rc2. 
	  Tag name: "foomatic-db-engine-3_0_0rc2".

	* README, USAGE, Foomatic-Devel-Ideas.txt: Added missing
	  substitution for ampersand in XML files, updated for version
	  3.0.0rc2.
	
2003-04-21  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c, lib/Foomatic/DB.pm, foomatic-configure.in:
	  added restriction for allowed strings by means of lists of
	  allowed characters (XML: '<arg_allowedchars>...</arg_allowedchars>',
	  PPD: '*FoomaticRIPOptionAllowedChars <option>: "..."') and Perl
	  regular expressions (XML: '<arg_allowedregexp>...
	  </arg_allowedregexp>',
	  PPD: '*FoomaticRIPOptionAllowedRegExp <option>: "..."'). The
	  allowed characters are checked by a '/^[...]*$/' expression in
	  the Perl scripts, so ranges with '-', forbidden characters with
	  a leading '^', or special characters as '\w', '\d', '\x07', ...
	  are allowed. Regular expressions are applied via a '/.../'
	  expression. These restrictions are done for security reasons, to
	  avoid for example a string like "|| rm -rf * ||" in a command line
	  option.

	  The string 'None' is always mapped to the empty string,
	  as PPD files and the command of some spoolers do not accept an
	  empty string as argument value. For the default value of a string
	  option always an enumerated choice in the PPD file is created,